--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "builds": [
-      { "src": "main.py", "use": "@vercel/python" }
+      { "src": "main.py", "use": "@now/python" }
     ],
     "routes": [
       {
