--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
     "builds": [
-      { "src": "main.py", "use": "@now/python" }
+      {
+        "src": "main.py",
+        "use": "@vercel/python"
+      }
     ],
     "routes": [
       {
@@ -9,4 +12,3 @@
       }
     ]
   }
-  
